--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,5 @@
         "Temp/": true
     },
     "dotnet.preferCSharpExtension": true,
-    "dotnet.defaultSolution": "dungeon_raid.sln"
+    "dotnet.defaultSolution": "koroshite.sln"
 }
